<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/lib/com.google.ads"
    style="@style/lightBackGroundStyle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:id="@+id/llProgressBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		<include
    		    android:id="@+id/pbApp_ref"
    		    android:layout_width="fill_parent"
    		    android:layout_height="wrap_content"
    		    layout="@layout/myprogressbar" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llHeaderScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    		<TextView
	            android:id="@+id/txtHeaderCricketScore"
	            style="@style/headerTextStyle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/headerScore"
	            >
	    		</TextView>
    
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llListScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    		<ListView
    		    android:id="@android:id/list"
    		    android:layout_width="match_parent"
    		    android:layout_height="87dp"
    		    android:minHeight="45dp" >

    		</ListView>
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llHeaderNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    		<TextView
            android:id="@+id/txtHeaderCricketNews"
            style="@style/headerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headerNews" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llWebView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    		<WebView
    		    android:id="@+id/webViewNews"
    		    android:layout_width="match_parent"
    		    android:layout_height="168dp" >

   			</WebView>
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnRefresh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRefresh" >
        </Button>
        
        <Button
            android:id="@+id/btnRecent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnRecent" >
        </Button>

        <Button
            android:id="@+id/btnUpcoming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnUpcoming" >
        </Button>
    </LinearLayout>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/lib/com.google.ads"
    android:id="@+id/linearLayoutAdMob"
    android:layout_width="match_parent"
    android:layout_height="50dp" >
        
    </LinearLayout>

</LinearLayout>